# king-cpp

./: .gitignore  CMakeLists.txt  ReadMe.md
ClassExamProject/: CMakeLists.txt  ReadMe.md
Example/: CMakeLists.txt
Example/CppBase/: CMakeLists.txt  kxperson.cpp  kxperson.h
Example/GMockExample/: CMakeLists.txt  foo.h  test.cpp
Example/GtestExample/: test.cpp
Example/PersonCpp/: person.cpp  person.h
Example/QtChart/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
Example/QtDemo/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Example/qlh-test/: CMakeLists.txt  test.cpp
LessonCode/: CMakeLists.txt
LessonCode/lab1-json/: CMakeLists.txt  ReadMe.md  kjson.cpp  kjson.h  lab1_json.sln  lab1_json.vcxproj  lab1_json.vcxproj.filters  main.cpp
LessonCode/lab1-json/tests/: test.json
LessonCode/lab2-search/: ReadMe.md  ksearch.cpp  ksearch.h  main.cpp  output.txt
LessonCode/lab3-smartInput/: CMakeLists.txt  ReadMe.md  common.h  handswriting.cpp  keyboard.cpp  kinputwindow.ui  main.cpp  setting.cpp
LessonCode/lab3-smartInput/演示/: dictionary.txt
LessonCode/week01/homework/: ReadMe.md  kjson.cpp  kjson.h  lab1_json.sln  lab1_json.vcxproj  lab1_json.vcxproj.filters  main.cpp
LessonCode/week02/: CMakeLists.txt
LessonCode/week02/homework/: ReadMe.md  ksearch.cpp  ksearch.h  main.cpp
LessonCode/week03/: CMakeLists.txt
LessonCode/week03/practice/circle/: CMakeLists.txt  main.cpp
LessonCode/week03/practice/circlelib/: CMakeLists.txt  circle.cpp  circle.h
LessonCode/week03/practice/circlemain/: CMakeLists.txt  test.cpp
LessonCode/week03/practice/hello/: CMakeLists.txt
LessonCode/week04/: CMakeLists.txt
LessonCode/week04/homework/: CMakeLists.txt  ReadMe.md  ksearch.h
LessonCode/week05/: CMakeLists.txt
LessonCode/week05/practice/simpleqt/: CMakeLists.txt  kmainwindow.cpp  kmainwindow.h  kmainwindow.qrc  kmainwindow.ui
LessonCode/week08/: CMakeLists.txt
LessonCode/week08/homework/: ReadMe.md
LessonCode/week08/homework/lab3-smartInput/: CMakeLists.txt  common.h  handswriting.cpp  handswriting.h  keyboard.cpp  keyboard.h  kinputwindow.cpp  kinputwindow.h  kinputwindow.qrc  kinputwindow.ui  setting.cpp  setting.h
LessonCode/week08/practice/: ReadMe.md
