# add_subdirectory(practice/01-ALLUI)
# add_subdirectory(practice/02-singal)
# add_subdirectory(practice/03-CustomSignal)
# add_subdirectory(practice/04-layout)
add_subdirectory(practice/05-qss)
# add_subdirectory(practice/06-MainWindows)
# add_subdirectory(practice/07-tabwidget)
# add_subdirectory(practice/08-MouseEvent)
# add_subdirectory(practice/09-mousepressevent)
# add_subdirectory(practice/10-customevent)
# add_subdirectory(practice/11-eventFilter)